fixed rtd html table text wrapping behavior

--- a/doc/source/_static/css/custom.css
+++ b/doc/source/_static/css/custom.css
@@ -12,10 +12,6 @@
 }
 */
 
-@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
-
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
-
 
 body {
   font-family: "Lato","proxima-nova","Helvetica Neue",Arial,sans-serif;
@@ -129,4 +125,20 @@ h4, h5, h6 {
   border-radius:3px;
   padding-left: 3px;
   padding-right: 3px;
+}
+
+
+/* table fix for wrapping text. thanks to https://rackerlabs.github.io/docs-rackspace/tools/rtd-tables.html */
+/* override table width restrictions */
+@media screen and (min-width: 767px) {
+
+   .wy-table-responsive table td {
+      /* !important prevents the common CSS stylesheets from overriding
+         this as on RTD they are loaded after this stylesheet */
+      white-space: normal !important;
+   }
+
+   .wy-table-responsive {
+      overflow: visible !important;
+   }
 }
